2011-10-09  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-file-name-handler): Add 'debug to the error
	condition.

2011-09-23  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-sh.el (tramp-sh-handle-file-name-all-completions): Fix
	nasty bug using wrong cached values.

2011-09-21  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-handle-shell-command): Set process sentinel and
	process filter, as done also in `shell-command'.

2011-09-19  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-sh.el (tramp-inline-compress-commands): Add "xz".
	Suggested by Liam Stitt <stittl@cuug.ab.ca>.

	* tramp-smb.el (tramp-methods): Use `tramp-smb-method'.
	(tramp-smb-handle-start-file-process): Don't reset
	query-on-exit-flag.
	(tramp-smb-kill-winexe-function): New defun.
	(tramp-smb-call-winexe): Add it to local `kill-buffer-hook'.

2011-09-18  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-sh.el (tramp-do-copy-or-rename-file-out-of-band)
	(tramp-maybe-open-connection): Use `tramp-file-name-real-host' for
	`tramp-current-host'.

2011-09-12  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-smb.el (tramp-smb-handle-file-attributes): Ignore errors.
	(tramp-smb-handle-start-file-process): Simplify process name detection.

2011-09-10  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-smb.el (tramp-smb-file-name-handler-alist): Add handler for
	`start-file-process'.
	(tramp-smb-handle-process-file): Tune process name determination.
	Use `tramp-temp-buffer-name'.  Narrow region at point-max.
	(tramp-smb-handle-start-file-process): New defun.

2011-09-07  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (top): Don't require 'shell.
	(tramp-methods): Fix docstring.
	(tramp-get-remote-tmpdir): Use `tramp-tmpdir', if defined for the
	respective method.

	* tramp-compat.el (top): Require 'shell.

	* tramp-smb.el (tramp-methods): Add `tramp-tmpdir' entry.
	(tramp-smb-winexe-shell-command): Fix docstring.