@@ -1,3 +1,9 @@
+2011-10-12  Michael Albinus  <michael.albinus@gmx.de>
+
+	* tramp.el (tramp-rfn-eshadow-update-overlay): Ignore errors.  Let
+	`file-name-handler-alist' be nil, the local file name part could
+	look remotely (for example on VMS).  (Bug#6019, Bug#9315)
+
 2011-10-09  Michael Albinus  <michael.albinus@gmx.de>
 
 	* tramp.el (tramp-file-name-handler): Add 'debug to the error
